[project]
name = "graphql-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beanie>=1.29.0",
    "fastapi[standard]>=0.115.12",
    "motor>=3.7.0",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "strawberry-graphql>=0.263.2",
    "uvicorn>=0.34.0",
]
