[project]
name = "graphql-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "strawberry-graphql[fastapi]>=0.263.2",
    "uvicorn>=0.34.0",
]

[project.scripts]
graphql-api = "graphql_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
